--- a/4_Implementation/Calci_UnitConverter/app/src/main/res/navigation/mobile_navigation.xml
+++ b/4_Implementation/Calci_UnitConverter/app/src/main/res/navigation/mobile_navigation.xml
@@ -48,7 +48,7 @@
     <fragment
         android:id="@+id/romtodec"
         android:name="com.example.calci_unitconverter.romtodec"
-        android:label="fragment_romtodec"
+        android:label="Roman to Decimal Converter"
         tools:layout="@layout/fragment_romtodec" />
 
 </navigation>
