--- a/4_Implementation/Calci_UnitConverter/app/src/main/res/layout/fragment_romtodec.xml
+++ b/4_Implementation/Calci_UnitConverter/app/src/main/res/layout/fragment_romtodec.xml
@@ -83,6 +83,7 @@
         android:background="#1B9478"
         android:gravity="center"
         android:hint="Decimal output"
+        android:inputType="none"
         android:textSize="24sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -124,6 +125,7 @@
         android:background="#1B9478"
         android:gravity="center"
         android:hint="Roman Output"
+        android:inputType="none"
         android:textSize="24sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
